<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.scc.app.RegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_username_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:theme="@style/AppTheme.InputFieldContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username_input_hint"
                android:theme="@style/AppTheme.InputField"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:theme="@style/AppTheme.InputFieldContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email_input_hint"
                android:theme="@style/AppTheme.InputField" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:theme="@style/AppTheme.InputFieldContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_phone_input_hint"
                android:theme="@style/AppTheme.InputField" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:passwordToggleEnabled="true"
            android:theme="@style/AppTheme.InputFieldContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password_input_hint"
                android:inputType="textPassword"
                android:theme="@style/AppTheme.InputField" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_confirm_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:passwordToggleEnabled="true"
            android:theme="@style/AppTheme.InputFieldContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_confirm_password_input_hint"
                android:inputType="textPassword"
                android:theme="@style/AppTheme.InputField" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/register_submit_button_text"
            android:theme="@style/AppTheme.Button" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/register_loading_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/blocking_view"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/register_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/AppTheme" />
    </FrameLayout>
</RelativeLayout>
