<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#50000000">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintTextColor="#50000000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_login_username_input_field_hint"
            android:textColor="#000000"
            android:textColorHint="#50000000"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:hintTextColor="#50000000"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_login_password_input_field_hint"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#50000000"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_login_submit_button_text"
        android:textSize="18sp" />

</LinearLayout>